--- a/index.html
+++ b/index.html
@@ -141,7 +141,7 @@
        <div class="slider-wrap clearfix">
        
        
-       <div class="column-3 skill-text">Не владею</div>
+       <div class="column-3 skill-text">Владею</div>
        <div class="column-3 skill-text">Использую готовые <br> решения</div>
        <div class="column-3 skill-text">Использую готовые решения и умею и переделывать</div>
        <div class="column-3 skill-text">Пишу сложный JS с нуля</div>
